syntax = "proto3";
package permission;

service PermissionService {
  rpc CreatePermission (CreatePermissionRequest) returns (PermissionResponse) {}
  rpc GetAllPermissions (GetAllPermissionsRequest) returns (GetAllPermissionsResponse) {}
  rpc GetPermission (GetPermissionRequest) returns (PermissionResponse) {}
  rpc UpdatePermission (UpdatePermissionRequest) returns (PermissionResponse) {}
  rpc DeletePermission (DeletePermissionRequest) returns (DeletePermissionResponse) {}
  rpc CreateManyPermissions (CreateManyPermissionsRequest) returns (CreateManyPermissionsResponse) {}
  rpc DeleteManyPermissions (DeleteManyPermissionsRequest) returns (DeleteManyPermissionsResponse) {}
}

message CreatePermissionRequest {
  string name = 1;
  string description = 2;
  bool isActive = 3;
}

message PermissionResponse {
  string id = 1;
  string name = 2;
  string description = 3;
  bool isActive = 4;
  string createdAt = 5;
  string updatedAt = 6;
}

message GetAllPermissionsRequest {
  bool isActive = 1;
  int32 limit = 2; // নতুন ফিল্ড
  int32 offset = 3; // নতুন ফিল্ড
}

message GetAllPermissionsResponse {
  repeated PermissionResponse permissions = 1;
  int32 total = 2; // নতুন ফিল্ড
}

message GetPermissionRequest {
  string id = 1;
}

message UpdatePermissionRequest {
  string id = 1;
  string name = 2;
  string description = 3;
  bool isActive = 4;
}

message DeletePermissionRequest {
  string id = 1;
}

message DeletePermissionResponse {
  bool success = 1;
  string message = 2;
}

message CreateManyPermissionsRequest {
  repeated CreatePermissionRequest permissions = 1;
}

message CreateManyPermissionsResponse {
  repeated PermissionResponse permissions = 1;
}

message DeleteManyPermissionsRequest {
  repeated string ids = 1;
}

message DeleteManyPermissionsResponse {
  bool success = 1;
  string message = 2;
}